--- a/api-project/index.html
+++ b/api-project/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="loadingin">
+      <h1 id="heading">CLICK THE CASTLE TO BEGIN YOUR ADVENTURE</h1>
+      <img id="carrotcastle" src="./carrotcastle.png" alt="carrotcastle">
+    </div>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
