--- a/api-project/index.html
+++ b/api-project/index.html
@@ -12,6 +12,7 @@
     <div id="loadingin">
       <h1 id="heading">CLICK THE CASTLE TO BEGIN YOUR ADVENTURE</h1>
       <img id="carrotcastle" src="./carrotcastle.png" alt="carrotcastle">
+      <img id="grass" src="./grass.png" alt="grass">
     </div>
     <script type="module" src="js/main.js"></script>
   </body>
