--- a/api-project/index.html
+++ b/api-project/index.html
@@ -11,8 +11,9 @@
   <body>
     <div id="loadingin">
       <h1 id="heading">CLICK THE CASTLE TO BEGIN YOUR ADVENTURE</h1>
-      <img id="carrotcastle" src="./carrotcastle.png" alt="carrotcastle">
+      <img id="carrotcastle" class="up" src="./carrotcastle.png" alt="carrotcastle">
       <img id="grass" src="./grass.png" alt="grass">
+      <img id="cloud1" class="clouds" src="./cloud1.png" alt="cloud1">
     </div>
     <script type="module" src="js/main.js"></script>
   </body>
