--- a/api-project/index.html
+++ b/api-project/index.html
@@ -14,6 +14,7 @@
       <img id="carrotcastle" class="up" src="./carrotcastle.png" alt="carrotcastle">
       <img id="grass" src="./grass.png" alt="grass">
       <img id="cloud1" class="clouds" src="./cloud1.png" alt="cloud1">
+      <img id="bun1" src="./bunny.png" alt="bunny1">
     </div>
     <script type="module" src="js/main.js"></script>
   </body>
