--- a/api-project/index.html
+++ b/api-project/index.html
@@ -11,10 +11,16 @@
   <body>
     <div id="loadingin">
       <h1 id="heading">CLICK THE CASTLE TO BEGIN YOUR ADVENTURE</h1>
-      <img id="carrotcastle" class="up" src="./carrotcastle.png" alt="carrotcastle">
-      <img id="grass" src="./grass.png" alt="grass">
-      <img id="cloud1" class="clouds" src="./cloud1.png" alt="cloud1">
-      <img id="bun1" src="./bunny.png" alt="bunny1">
+      <div id="carrotcastle" class="up" alt="carrotcastle">
+        <img id="bun1" class="bunbefore" src="./bunny.png" alt="bunny1">
+        <img id="bun3" class="bunbefore" src="./bun3.png" alt="bunny3">
+        <img id="bunflag" class="flagbefore" src="./bunflag.png" alt="bunflag">
+      </div>
+      <img id="grass" class="grassdown" src="./grass.png" alt="grass">
+      <div id="grass2" class="grass2down"></div>
+      <div id="skipbtncon">
+        <button id="skipbtn">SKIP + make me sad :C</button>
+      </div>
     </div>
     <script type="module" src="js/main.js"></script>
   </body>
