--- a/api-project/index.html
+++ b/api-project/index.html
@@ -7,21 +7,34 @@
     <title>API</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="loadingin">
-      <h1 id="heading">CLICK THE CASTLE TO BEGIN YOUR ADVENTURE</h1>
-      <div id="carrotcastle" class="up" alt="carrotcastle">
-        <img id="bun1" class="bunbefore" src="./bunny.png" alt="bunny1">
-        <img id="bun3" class="bunbefore" src="./bun3.png" alt="bunny3">
-        <img id="bunflag" class="flagbefore" src="./bunflag.png" alt="bunflag">
-      </div>
-      <img id="grass" class="grassdown" src="./grass.png" alt="grass">
-      <div id="grass2" class="grass2down"></div>
-      <div id="skipbtncon">
-        <button id="skipbtn">SKIP + make me sad :C</button>
-      </div>
+    <div id="header">
+        <img class="stuffinheader" id="icon" src="icon.png" alt="icon">
+        <h2 id="ccc" class="stuffinheader headertext">character creator</h2>
+        <h2 class="stuffinheader headertext">carrot dice</h2>
+        <h2 class="stuffinheader headertext">guide</h2>
+        <h2 class="stuffinheader headertext">wiki</h2>
+    </div>
+    <div id="con">
+        <div id="homepage">
+            <div id="dinoimgcon">
+                <img id="dinoimg" src="./bunn.jpg" alt="dino">
+            </div>
+        </div>
+        <div class="thesenamesdontmakesenseimsorry" id="adslmao">
+            <div>
+                <h4 class="thesenamesdontmakesenseimsorry" id="subtitle1">D&D FOR DUMMIES</h4>
+                <p class="thesenamesdontmakesenseimsorry" id="subtext2">In D&D, each player creates a heroic character to represent them in the game: this might be a skilled fighter, a devout cleric, a deadly rogue, a spellcasting wizard, or something else entirely!</p>
+                <p class="thesenamesdontmakesenseimsorry">Together, the Dungeon Master (or DM) and players create an exciting story where their bold adventurers confront deadly perils. Even if the group doesn’t complete the adventure successfully, the good time and memories make everyone a winner!</p>
+                <p class="thesenamesdontmakesenseimsorry">You can start creating a character here:</p>
+                <button id="createyourcharacterbtn2">create your character</button>
+            </div>
+        </div>
     </div>
     <script type="module" src="js/main.js"></script>
-  </body>
+</body>
 </html>
