--- a/api-project/index.html
+++ b/api-project/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <div id="header">
-        <img class="stuffinheader" id="icon" src="icon.png" alt="icon">
-        <h2 id="ccc" class="stuffinheader headertext">character creator</h2>
-        <h2 class="stuffinheader headertext">carrot dice</h2>
-        <h2 class="stuffinheader headertext">guide</h2>
-        <h2 class="stuffinheader headertext">wiki</h2>
+        <img class="stuffinheader" id="icon" src="./public/icon.png" alt="icon">
+        <button id="ccc" class="stuffinheader headertext">character creator</button>
+        <button class="stuffinheader headertext">carrot dice</button>
+        <button class="stuffinheader headertext">guide</button>
+        <button class="stuffinheader headertext">wiki</button>
     </div>
     <div id="con">
         <div id="homepage">
@@ -27,7 +27,7 @@
         </div>
         <div class="thesenamesdontmakesenseimsorry" id="adslmao">
             <div>
-                <h4 class="thesenamesdontmakesenseimsorry" id="subtitle1">D&D FOR DUMMIES</h4>
+                <h1 class="thesenamesdontmakesenseimsorry" id="subtitle1">D&D FOR DUMMIES</h1>
                 <p class="thesenamesdontmakesenseimsorry" id="subtext2">In D&D, each player creates a heroic character to represent them in the game: this might be a skilled fighter, a devout cleric, a deadly rogue, a spellcasting wizard, or something else entirely!</p>
                 <p class="thesenamesdontmakesenseimsorry">Together, the Dungeon Master (or DM) and players create an exciting story where their bold adventurers confront deadly perils. Even if the group doesn’t complete the adventure successfully, the good time and memories make everyone a winner!</p>
                 <p class="thesenamesdontmakesenseimsorry">You can start creating a character here:</p>
