--- a/api-project/index.html
+++ b/api-project/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="header">
-        <img class="stuffinheader" id="icon" src="./public/icon.png" alt="icon">
+        <img class="stuffinheader" id="icon" src="./public/icon.png" alt="bunny icon using 2 carrots behind a bunny in reference to a jollyroger">
         <button id="ccc" class="stuffinheader headertext">character creator</button>
         <button class="stuffinheader headertext">carrot dice</button>
         <button class="stuffinheader headertext">guide</button>
@@ -22,7 +22,7 @@
     <div id="con">
         <div id="homepage">
             <div id="dinoimgcon">
-                <img id="dinoimg" src="./bunn.jpg" alt="dino">
+                <img id="dinoimg" src="./bunn.jpg" alt="bunny wearing a raincoat holding an umbrella while walkingthrough a forest">
             </div>
         </div>
         <div class="thesenamesdontmakesenseimsorry" id="adslmao">
