--- a/api-project/index.html
+++ b/api-project/index.html
@@ -34,6 +34,8 @@
                 <button id="createyourcharacterbtn2">create your character</button>
             </div>
         </div>
+        <p>i give up, its uggo</p>
+        <input type="text" placeholder="SEARCH BAR">
     </div>
     <script type="module" src="js/main.js"></script>
 </body>
