--- a/api-project/index.html
+++ b/api-project/index.html
@@ -34,8 +34,21 @@
                 <button id="createyourcharacterbtn2">create your character</button>
             </div>
         </div>
-        <p>i give up, its uggo</p>
-        <input type="text" placeholder="SEARCH BAR">
+        <div id="actualprojectcontainerlmao">
+            <p>i give up, its uggo <br/>search up one of these races and it'll give u info on them</p>
+            <form id="form">
+                <input id="userinput" type="text" placeholder="SEARCH BAR">
+                <button id="submit">submit</button>
+            </form>
+            <div id="racesShowPlace">
+                <div id="racelist">
+
+                </div>
+                <div id="raceinfo">
+
+                </div>
+            </div>
+        </div>
     </div>
     <script type="module" src="js/main.js"></script>
 </body>
