--- a/api-project/index.html
+++ b/api-project/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div id="actualprojectcontainerlmao">
-            <p>i give up, its uggo <br/>search up one of these races and it'll give u info on them</p>
+            <p id="giveuptext">i give up, its uggo <br/>search up one of these races and it'll give u info on them</p>
             <form id="form">
                 <input id="userinput" type="text" placeholder="SEARCH BAR">
                 <button id="submit">submit</button>
